-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
b8d3508a2 (dev)
Add this into QtGraphs testbed BarChangingSetCount example:
barComponent: Item { property color barColor Rectangle { anchors.fill: parent color: barColor } }
After this the example doesn't work anymore, bars don't get removed. Issue is that only default nodes are handled in BarsRenderer, not custom components.
For Gerrit Dashboard: QTBUG-125710 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
562758,2 | BarChangingSetCount example doesn't work with custom bar components | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |