BarChangingSetCount example doesn't work with custom bar components

Custom components on bar series are not removed dynamically.

Task-number: QTBUG-125710
Change-Id: Icebe336fc145029d29136abd8aa4fa9cc04730c0
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>